--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ description: >
 baseurl: "/pages-starter" # the subpath of your site
 url: "https://hisaonakai.github.io"
 #email: steve@ortizaggies.com
-#github_username:  chesshacker
+github_username:  hisaonakai
 #linkedin_username: chesshacker
 #twitter_username: chesshacker
 
