--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ description: >
   This site will get you started hacking with GitHub Pages.
 baseurl: "/pages-starter" # the subpath of your site
 url: "https://hisaonakai.github.io"
-#email: steve@ortizaggies.com
+email: xscitx@gmail.com
 github_username:  hisaonakai
 #linkedin_username: chesshacker
 #twitter_username: chesshacker
